@@ -4,12 +4,12 @@ package com.verr1.controlcraft.content.valkyrienskies.attachments;
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.verr1.controlcraft.content.links.CimulinkBlockEntity;
 import com.verr1.controlcraft.foundation.cimulink.game.port.BlockLinkPort;
 import com.verr1.controlcraft.foundation.data.WorldBlockPos;
 import org.valkyrienskies.core.api.ships.ServerShip;
 
-import java.util.HashSet;
-import java.util.Set;
+import java.util.*;
 
 @JsonAutoDetect(
         fieldVisibility = JsonAutoDetect.Visibility.ANY,
@@ -33,15 +33,19 @@ public class CimulinkPorts {
 
 
     @JsonIgnore
-    private final Set<WorldBlockPos> ports = new HashSet<>();
+    private final Map<WorldBlockPos, String> ports = new HashMap<>();
 
 
     public Set<WorldBlockPos> getAll(){
-        return Set.copyOf(ports);
+        return Collections.unmodifiableSet(ports.keySet());
     }
 
-    public void add(WorldBlockPos pos){
-        ports.add(pos);
+    public void set(WorldBlockPos pos, String name){
+        ports.put(pos, name);
+    }
+
+    public List<WorldBlockPos> getLinksOf(String name){
+        return ports.entrySet().stream().filter(e -> e.getValue().equals(name)).map(Map.Entry::getKey).toList();
     }
 
     public void remove(WorldBlockPos pos){
@@ -49,7 +53,7 @@ public class CimulinkPorts {
     }
 
     public void validate(){
-        ports.removeIf(w -> BlockLinkPort.of(w).isEmpty());
+        ports.keySet().removeIf(w -> BlockLinkPort.of(w).isEmpty());
     }
 
 
